--- a/style.css
+++ b/style.css
@@ -1,7 +1,66 @@
 /* work sans font */
  @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700;800&family=Work+Sans:wght@400;500;600;700;800&display=swap');
 
+ /* shared styles */
  *{
     font-family: 'Open Sans', sans-serif;
     font-family: 'Work Sans', sans-serif;
+ }
+ .btn-primary{
+    width: 180px;
+    height: 64px;
+    flex-shrink: 0;
+    border-radius: 8px;
+    background: #FF900E;
+    color: #FFF;
+    text-align: center;
+    font-family: Work Sans;
+    font-size: 20px;
+    font-weight: 600;
+
+ }
+ /* header styles */
+ header{
+    background: rgba(255, 144, 14, 0.10);
+    padding: 50px 240px;
+ }
+ nav{
+    display: flex;
+    justify-content: space-between;
+ }
+ .nav-title{
+    font-size: 2.8 rem;
+    font-weight: 700;
+    color: #131313;
+ }
+ nav>ul{
+    display: flex;
+ }
+ nav li{
+    list-style: none;
+    margin-right: 30px;
+    color: var(--Dark-02, #424242);
+    text-align: center;
+    font-family: Work Sans;
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 26px; /* 144.444% */
+ }
+ nav li a{
+    text-decoration: none;
+    color:  #424242;
+ }
+ /* banner style */
+ .banner-content{
+    min-width: 800px;
+    text-align: center;
+    margin: 0 auto;
+ }
+ .banner-title{
+    font-size: 4rem;
+    font-weight: 700;
+    color: #131313;
+ }
+ .banner-description{
+    color: #727272;
  }
