--- a/style.css
+++ b/style.css
@@ -6,19 +6,16 @@
     font-family: 'Open Sans', sans-serif;
     font-family: 'Work Sans', sans-serif;
  }
- .btn-primary{
-    width: 180px;
-    height: 64px;
-    flex-shrink: 0;
+ .btn-primary {
     border-radius: 8px;
-    background: #FF900E;
     color: #FFF;
-    text-align: center;
-    font-family: Work Sans;
-    font-size: 20px;
-    font-weight: 600;
-
- }
+    font-size: 1.25rem;
+    background: #FF900E;
+    padding: 20px 25px;
+    color: #FFF;
+    cursor: pointer;
+    border: 0;
+}
  /* header styles */
  header{
     background: rgba(255, 144, 14, 0.10);
@@ -27,12 +24,15 @@
  nav{
     display: flex;
     justify-content: space-between;
+    align-items: center;
+
  }
- .nav-title{
-    font-size: 2.8 rem;
+ .section-title {
+    font-size: 2.8rem;
     font-weight: 700;
     color: #131313;
- }
+}
+
  nav>ul{
     display: flex;
  }
@@ -63,4 +63,26 @@
  }
  .banner-description{
     color: #727272;
+    font-weight: 400;
+ }
+ .banner img{
+    margin-top: 20px;
+    width: 100%;
+ }
+ /* resoponsive media queries */
+ @media screen (max-width:576px)  {
+    header{
+        padding: 20px;
+    }
+    nav{
+        flex-direction: column;
+    }
+    
+ }
+ /* responsive table or medium device */
+ @media screen (min-width:576px)and(max-width:992px) {
+    header{
+        padding: 50px;
+    }
+    
  }
