--- a/style.css
+++ b/style.css
@@ -6,6 +6,9 @@
     font-family: 'Open Sans', sans-serif;
     font-family: 'Work Sans', sans-serif;
  }
+ .text-light-gray{
+    color: #727272;
+}
  .btn-primary {
     border-radius: 8px;
     color: #FFF;
@@ -39,7 +42,7 @@
  nav li{
     list-style: none;
     margin-right: 30px;
-    color: var(--Dark-02, #424242);
+    color:#424242;
     text-align: center;
     font-family: Work Sans;
     font-size: 18px;
@@ -61,34 +64,15 @@
     font-weight: 700;
     color: #131313;
  }
- .banner-description{
-    color: #727272;
-    font-weight: 400;
- }
+ 
  .banner img{
     margin-top: 20px;
     width: 100%;
  }
- /* resoponsive media queries */
- @media screen (max-width:576px)  {
-    header{
-        padding: 20px;
-    }
-    nav{
-        flex-direction: column;
-    }
-    
- }
- /* responsive table or medium device */
- @media screen (min-width:576px)and(max-width:992px) {
-    header{
-        padding: 50px;
-    }
-    
- }
+ 
  main{
     max-width: 1440px;
-    margin: 0 auto;
+    margin: 70px auto;
  }
  /* teams style */
  .teams-conteiner{
@@ -108,10 +92,44 @@
     font-size: 2.8rem;
  }
  .teams-title .quick-list{
-    color: #727272;
     font-weight: 500;
  }
  .teams-title .text-features{
     color: #FF900E;
     font-weight: 700;
+ }
+
+
+
+
+
+
+ /* resoponsive media queries */
+ @media screen (max-width:576px)  {
+    header{
+        padding: 20px;
+    }
+    nav,
+    .teams-conteiner
+    {
+        flex-direction: column;
+    }
+    .teams-img-conteiner{
+        grid-template-columns:1fr;
+    }
+    .teams-content{
+        padding-left: 20px;
+        padding-right: 20px;
+     }
+    
+ }
+ /* responsive table or medium device */
+ @media screen (min-width:576px)and(max-width:960px) {
+    header{
+        padding: 50px;
+    }
+    nav,.teams-conteiner{
+        flex-direction: column;
+    }
+    
  }
