--- a/style.css
+++ b/style.css
@@ -19,6 +19,11 @@
     cursor: pointer;
     border: 0;
 }
+.section-title {
+    font-size: 2.8rem;
+    font-weight: 700;
+    color: #131313;
+}
  /* header styles */
  header{
     background: rgba(255, 144, 14, 0.10);
@@ -30,11 +35,7 @@
     align-items: center;
 
  }
- .section-title {
-    font-size: 2.8rem;
-    font-weight: 700;
-    color: #131313;
-}
+
 
  nav>ul{
     display: flex;
@@ -98,8 +99,39 @@
     color: #FF900E;
     font-weight: 700;
  }
-
-
+/* facts section */
+.facts-card-container {
+    display: flex;
+    justify-content: space-around;
+}
+.facts-card-container .card{
+    border-radius: 8px;
+    border: 1px solid #FF900E;
+    text-align: center;
+    padding:30px;
+}
+.facts-card-container .card-title{
+    font-weight: 600;
+    font-size: 1.25rem;
+    margin-top: 5px;
+}
+.facts-card-container .card-stats{
+    font-size: 2.8rem;
+    color: #424242;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+/* sponsors style */
+.sponsors{
+    text-align: center;
+}
+.sponsors-img-container{
+    margin-top: 50px;
+   display: flex;
+   justify-content: space-evenly;
+   align-items: center;
+   gap:40px;
+}
 
 
 
@@ -110,16 +142,24 @@
         padding: 20px;
     }
     nav,
-    .teams-conteiner
+    .teams-conteiner,
+    .facts-card-container,
+    .sponsors-img-container 
     {
         flex-direction: column;
     }
     .teams-img-conteiner{
         grid-template-columns:1fr;
     }
-    .teams-content{
+    .teams-content, .facts-card-container {
         padding-left: 20px;
         padding-right: 20px;
+     }
+     .facts-card-container {
+        gap:20px;
+     }
+     .sponsors-img-container img{
+        width: 165px;
      }
     
  }
@@ -128,7 +168,10 @@
     header{
         padding: 50px;
     }
-    nav,.teams-conteiner{
+    nav,
+    .teams-conteiner,
+    .sponsors-img-container
+    {
         flex-direction: column;
     }
     
